# avajana

./: Makefile  README.md  pyproject.toml
avajana/: bubbling.py
research notes/bubbling/: Find a good pareto.ipynb
tests/: test_avajana.py  test_bubbling.py
