[tool.poetry]
name = "avajana"
version = "0.1.0"
description = ""
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
halo = "^0.0.29"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
