[tool.poetry]
name = "avajana"
version = "0.4.1"
description = "Avajana helps chatbot to express/emulate indirect expressions. Currently, it helps with chatbot bubbling. The bubble that happen to the other end of receipient when someone is typing."
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
maintainers = ["Nutchanon Ninyawee <me@nutchanon.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sakuguru/avajana"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
halo = "^0.0.29"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
